--- a/src/app/componentes/persona/consultar-persona/consultar-persona.component.html
+++ b/src/app/componentes/persona/consultar-persona/consultar-persona.component.html
@@ -15,33 +15,21 @@
 
       </div>
       <div class="col-md-2">
-
-     
-
         <select class="form-control" [(ngModel)]="registros" (change)="reiniciar()">
           <option value="5">5</option>
           <option value="10">10</option>
           <option value="20">20</option>
           <option value="40">40</option>
-
-
         </select>
-
+        <label class="label-sm" style="font-size: 10px; font-weight: bold" for="selectPaginas">Registros por página</label>
       </div>
 
       <div class="col-md-2">
-
-
-
         <select class="form-control" [(ngModel)]="orden" (change)="reiniciar()">
           <option value="ASC">Ascendente</option>
           <option value="DESC">Descendente</option>
-        
-
-
-
         </select>
-
+        <label class="label-sm" style="font-size: 10px; font-weight: bold" for="selectPaginas">Orden</label>
       </div>
 
       <div class="col-md-1">
@@ -54,15 +42,8 @@
 
     </div>
 
-    <div class="row">
-    
-
-      
+    <div class="row">      
       <div class="col-md-2">
-     <!--    <button class="btn btn-primary" (click)="reiniciar">
-          <i class="mdi mdi-refresh"></i>
-        </button> -->
-
       </div>
     </div>
   </div>
